--- a/app/src/main/res/layout/activity_list_of_obj.xml
+++ b/app/src/main/res/layout/activity_list_of_obj.xml
@@ -8,7 +8,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="410dp"
+        android:layout_width="match_parent"
         android:layout_height="61dp"
         android:layout_marginTop="4dp"
         android:background="?attr/colorPrimary"
@@ -21,12 +21,13 @@
         app:theme="@style/ThemeOverlay.AppCompat.Dark" />
 
     <ListView
-        android:layout_width="409dp"
+        android:layout_width="match_parent"
         android:layout_height="545dp"
         android:layout_below="@+id/toolbar"
         android:id="@+id/listview"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        />
 
     <Button
         android:id="@+id/button"
