--- a/app/src/main/res/drawable/my_selector.xml
+++ b/app/src/main/res/drawable/my_selector.xml
@@ -6,4 +6,6 @@
     <item
         android:state_pressed="true"
         android:drawable="@color/purple_200"></item>
+    <item android:state_checked="true" android:drawable="@color/purple_200"/>
+    <item android:drawable="@color/white"/>
 </selector>
