--- a/app/src/main/res/drawable/my_selector.xml
+++ b/app/src/main/res/drawable/my_selector.xml
@@ -3,9 +3,9 @@
     <item
         android:state_selected="true"
         android:drawable="@color/purple_200"></item>
+
     <item
-        android:state_pressed="true"
+        android:state_checked="true"
         android:drawable="@color/purple_200"></item>
-    <item android:state_checked="true" android:drawable="@color/purple_200"/>
-    <item android:drawable="@color/white"/>
+
 </selector>
